Overflow css fix

--- a/share/media/css/audiosources_admin.css
+++ b/share/media/css/audiosources_admin.css
@@ -501,16 +501,20 @@ input[type=text] {
   padding:0;
   width:100%;
   height:10px;
+  overflow:hidden;
   background-color:#C5C5C5;
   border-top-left-radius: 4px; -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px;
   border-top-right-radius: 4px; -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px;
 }
 
+.planning_element:hover .phead {
+  overflow:visible;
+  height:auto;
+}
+
 .planning_element_container div span {
-  display:inline-block;
   margin-top:-2px;
   padding-left:2px;
-  line-height:10px;
   letter-spacing:0px;
   font-size:10px;
 }
